package com.pattern.structural.decorator

interface Decorated
