package com.pattern.structural.decorator

interface Decorator : Decorated
